<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?selectableItemBackground"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/Single_User_ProfileImage"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/person_account"
        app:civ_circle_background_color="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/Single_User_ProfileImage"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Single_User_Name"
                style="@style/textviewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/User_Name"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/Single_User_Message_Time"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="bottom|end"
                android:text="@string/Time" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Single_User_Last_Message"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/Message_Description" />


            <ImageView
                android:id="@+id/Single_User_Mute_Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/volume_off"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/Single_User_Pin_Icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:rotation="45"
                android:src="@drawable/push_pin"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>