<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.activities.authentication.PhoneNumberVerification">

    <TextView
        android:id="@+id/Enter_Phone_No_Textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        style="@style/textviewStyle"
        android:maxLines="2"
        android:text="@string/Enter_phone_number"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/Receive_Sms_Verification_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Receive_Sms_Verification_Code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Enter_Phone_No_Textview"
        style="@style/textviewStyle"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/Enter_Phone_No_Textview"
        app:layout_constraintTop_toBottomOf="@+id/Enter_Phone_No_Textview"
        app:layout_constraintVertical_bias="0.03" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/CountryName_Picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_border"
        android:padding="8dp"
        app:ccpDialog_cornerRadius="8dp"
        app:ccpDialog_showPhoneCode="false"
        app:ccpDialog_showTitle="true"
        app:ccp_arrowColor="?attr/colorControlNormal"
        app:ccp_autoDetectCountry="true"
        app:ccp_contentColor="?attr/colorControlNormal"
        app:ccp_showArrow="true"
        app:ccp_showFullName="true"
        app:ccp_showNameCode="false"
        app:ccp_showPhoneCode="false"
        app:ccp_textGravity="LEFT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Receive_Sms_Verification_TextView"
        app:layout_constraintVertical_bias="0.07" />

    <LinearLayout
        android:id="@+id/Phone_Number_Verification_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/CountryName_Picker"
        app:layout_constraintStart_toStartOf="@+id/CountryName_Picker"
        app:layout_constraintTop_toBottomOf="@id/CountryName_Picker"
        app:layout_constraintVertical_bias="0.05">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_border"
            android:gravity="center"
            app:ccpDialog_showFlag="false"
            app:ccp_contentColor="?attr/colorControlNormal"
            app:ccpDialog_showNameCode="false"
            app:ccpDialog_showPhoneCode="true"
            app:ccpDialog_showTitle="false"
            app:ccp_showArrow="false"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_edittext_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:layout_weight="3"
            android:focusableInTouchMode="true"
            android:hint="@string/Phone_Number_Hint"
            android:textColorHint="@color/grey"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="?attr/colorControlNormal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                style="@style/textviewStyle"
                android:inputType="phone"
                android:maxLines="1"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/PhoneNumber_Verify_Next_Btn"
        style="@style/Widget.App.Button"
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:text="@string/Button_text"
        android:textAlignment="center"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone_Number_Verification_linearLayout"
        app:layout_constraintVertical_bias=".9"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>