<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.chats.PersonalChat">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/Personal_Chat_Toolbar"
        style="@style/toolbarTint"
        app:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetStart="8dp"
            app:menu="@menu/personal_chat_toolbar_menu"
            app:title="@null">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/Personal_Chat_Back_Btn_Navigation"
                style="@style/Widget.AppCompat.Toolbar.Button.Navigation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/Personal_Chat_Back_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDescription"
                    android:src="@drawable/arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/Personal_Chat_Profile_Image"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/person_account"
                    app:civ_circle_background_color="@color/light_blues"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/Personal_Chat_Back_Btn"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/Personal_Chat_UserName_LL"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Personal_Chat_UserName"
                    style="@style/textviewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/roboto_medium"
                    android:maxEms="10"
                    android:maxLines="1"
                    android:text="@string/User_Name"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/Personal_Chat_User_ActivityStatus"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/roboto_medium"
                    android:maxLines="1"
                    android:text="@string/Activity_Status"
                    android:visibility="gone" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Personal_Chat_RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@+id/Personal_Chat_EditText_LL"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/Personal_Chat_EditText_LL"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            android:layout_margin="4dp"
            android:orientation="horizontal"
            android:weightSum="1"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/Personal_Chat_RecyclerView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="1"
                style="@style/cardViewStyle"
                card_view:cardCornerRadius="23dp"
                card_view:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/Personal_Chat_EditText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@android:color/transparent"
                        android:fadeScrollbars="false"
                        android:gravity="start|center_vertical"
                        android:hint="@string/messages_header"
                        android:imeOptions="actionSend"
                        android:importantForAutofill="no"
                        android:inputType="textMultiLine"
                        android:maxLines="6"
                        android:minLines="1"
                        android:padding="9dp"
                        android:scrollbarAlwaysDrawVerticalTrack="true"
                        android:scrollbarDefaultDelayBeforeFade="200"
                        android:scrollbarFadeDuration="300"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical"
                        android:textColor="@android:color/black"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/ChatActivity_File_Attachment_BTN"
                        android:layout_width="26dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/contentDescription"
                        android:rotation="-45"
                        android:src="@drawable/attach_file" />

                    <ImageView
                        android:id="@+id/ChatActivity_Camera_BTN"
                        android:layout_width="26dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/contentDescription"
                        android:src="@drawable/android_camera" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/Personal_Chat_Send_Btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@drawable/circle_background"
                android:backgroundTint="@color/app_primary_color"
                android:contentDescription="@string/contentDescription"
                android:rotation="330"
                android:scaleType="center"
                android:src="@drawable/send"
                app:tint="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>